--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -9,18 +9,19 @@
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
         android:padding="30dp"
-        android:src="@drawable/ic_beranda"
-        android:layout_alignBottom="@+id/linearLayout"
+        android:src="@drawable/ic_person"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout">
-    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pengguna :"
+            android:textColor="#000"
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </RelativeLayout>
