--- a/app/src/main/res/menu/item_navigasi.xml
+++ b/app/src/main/res/menu/item_navigasi.xml
@@ -29,6 +29,11 @@
                 android:checked="false"
                 android:icon="@drawable/ic_about"
                 android:title="Tentang" />
+            <item
+                android:id="@+id/logOut"
+                android:checked="false"
+                android:icon="@drawable/ic_person"
+                android:title="Keluar" />
 
         </menu>
     </item>
