--- a/app/src/main/res/layout/list_info_dokter.xml
+++ b/app/src/main/res/layout/list_info_dokter.xml
@@ -12,47 +12,89 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="#fff">
+
         <ImageView
             android:id="@+id/fotoDokter"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_profile"/>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/icon_profile"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:paddingLeft="10dp"
             android:orientation="vertical"
-            android:paddingLeft="10dp">
+            android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/namaDokter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nama Dokter"
-                android:textColor="#000"
-                android:paddingBottom="5dp"
-                android:paddingTop="5dp"/>
-            <TextView
-                android:id="@+id/idRuangan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:text="Ruangan"
-                android:paddingBottom="5dp"/>
-            <TextView
-                android:id="@+id/idHari"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:text="Hari"
-                android:paddingBottom="5dp"/>
-            <TextView
-                android:id="@+id/idJam"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:text="Jam"
-                android:paddingBottom="5dp"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="40dp">
+                <TextView
+                    android:id="@+id/nama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="Nama : "
+                    android:textColor="#000"/>
+
+                <TextView
+                    android:id="@+id/namaDokter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nama Dokter"
+                    android:layout_toRightOf="@+id/nama"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/hari"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    android:text="Hari    : "
+                    android:textColor="#000"/>
+                <TextView
+                    android:id="@+id/idHari"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/hari"
+                    android:textColor="#000"
+                    android:text="Hari"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/jam"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    android:text="Jam    : "
+                    android:textColor="#000"/>
+                <TextView
+                    android:id="@+id/idJam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/jam"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:text="Jam"
+                    android:paddingBottom="5dp"/>
+
+            </RelativeLayout>
+
         </LinearLayout>
 
     </LinearLayout>
